{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 52,
  "lineage": "a2d1b855-631f-bf49-f2bb-a69602695b30",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkInterfaces/myNIC-1",
            "internal_domain_name_suffix": "xurrnvloe4luncczqr4jlzefwg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_1_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/publicIPAddresses/myPublicIP-1",
                "subnet_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/virtualNetworks/acme-vnet/subnets/acme-subnet"
              }
            ],
            "location": "eastus",
            "name": "myNIC-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-allowed-hen"
          },
          "dependencies": [
            "azurerm_public_ip.myPubIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "random_pet.rg_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkInterfaces/myNIC-2",
            "internal_domain_name_suffix": "xurrnvloe4luncczqr4jlzefwg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_2_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/publicIPAddresses/myPublicIP-2",
                "subnet_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/virtualNetworks/acme-vnet/subnets/acme-subnet"
              }
            ],
            "location": "eastus",
            "name": "myNIC-2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-allowed-hen"
          },
          "dependencies": [
            "azurerm_public_ip.myPubIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nicNSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkInterfaces/myNIC-1|/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkInterfaces/myNIC-1",
            "network_security_group_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.myPubIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "random_pet.rg_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkInterfaces/myNIC-2|/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkInterfaces/myNIC-2",
            "network_security_group_id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.myPubIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "location": "eastus",
            "name": "myNSG",
            "resource_group_name": "rg-allowed-hen",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "eastus",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "rg-allowed-hen",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myPubIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/publicIPAddresses/myPublicIP-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP-1",
            "resource_group_name": "rg-allowed-hen",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/publicIPAddresses/myPublicIP-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP-2",
            "resource_group_name": "rg-allowed-hen",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/virtualNetworks/acme-vnet/subnets/acme-subnet",
            "name": "acme-subnet",
            "resource_group_name": "rg-allowed-hen",
            "virtual_network_name": "acme-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d51623bd-276e-4697-8859-847c95e485b6",
            "id": "/subscriptions/d72a06ed-d984-410d-bd0d-af6a4ca4ceaa/resourceGroups/rg-allowed-hen/providers/Microsoft.Network/virtualNetworks/acme-vnet",
            "location": "eastus",
            "name": "acme-vnet",
            "resource_group_name": "rg-allowed-hen",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    }
  ]
}